[tool.poetry]
name = "lambdatools"
version = "0.1.0"
description = ""
authors = ["robertdumitru <robert.dumitru@uni.minerva.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
